src/build/boc-build/tests/test-build-failure-no-summary/expected-output.txt
==== stderr ====
Building 4 out-of-date targets
src/myprog/main.cpp:1:1: error: expected unqualified-id before ‘this’
 this
 ^
[ERROR] Build failed
==== stdout ====
Unsatisfiable:
    pkg/bin/myprog
    project
